# goose-tools

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  .slop.toml  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/skills/add-new-module/: SKILL.md
.agents/skills/agent-quality-lint/: SKILL.md
.agents/skills/deploy-goose-tools/: SKILL.md
.agents/skills/fix-class-complexity/: SKILL.md
.agents/skills/fix-class-inheritance/: SKILL.md
.agents/skills/fix-complexity/: SKILL.md
.agents/skills/fix-deps-cycle/: SKILL.md
.agents/skills/fix-halstead/: SKILL.md
.agents/skills/fix-hotspot/: SKILL.md
.agents/skills/fix-issue/: SKILL.md
.agents/skills/fix-npath/: SKILL.md
.agents/skills/fix-orphans/: SKILL.md  fix-orphans.md
.agents/skills/fix-packages/: SKILL.md
.agents/skills/goose-launcher/: SKILL.md
.agents/skills/improve-shell-quality/: SKILL.md
.agents/skills/list-goose-models/: SKILL.md  (+1 more)
.github/workflows/: ci.yml
docs/: agent-profile-security.md  customization-defaults.md  global-warp-rule.md  goose-config-defaults.md  operations.md  plan-execute-workflow.md  progressive-disclosure-compliance.md  progressive-disclosure.md  recipes.md  shell-compatibility.md  troubleshooting.md
docs/plans/: goose-tools-migration.md
tests/: AGENTS.md  test_goose_pw_plan_negative_rule.sh  test_oz_pw_plan_negative_rule.sh
tests/bats/: test_shell_compat.bats  test_warp_tools_subcommands.bats  test_workflow_scripts.bats
tests/shell_compat/: run_compat.sh
utils/: AGENTS.md
utils/shell/: common.sh  flags.sh  github.sh  logging.sh  paths.sh
(+89 files in other folders)
